--- a/argsets/pyproject.toml
+++ b/argsets/pyproject.toml
@@ -2,7 +2,7 @@
 name = "argsets"
 version = "0.1.0"
 description = ""
-authors = ["Gordon Yeong <gordon.yeong@broadsource.com.au>"]
+authors = ["Gordon Yeong <anexiole@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.6"
